generated/EasyXMLParser.py
# Generated from EasyXML.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class EasyXMLParser ( Parser ):

    grammarFileName = "EasyXML.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'document'", "'node'", "'attribute'", 
                     "'string'", "'int'", "'float'", "'else'", "'if'", "'for'", 
                     "'while'", "'in'", "'and'", "'or'", "'new'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "';'", "<INVALID>", "'='", 
                     "'+='", "'.'", "'>'", "'<'", "'=='", "'!='", "'>='", 
                     "'<='", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "ARRAY_TYPE", "TYPE", "ACTION_OPERATOR", 
                      "BOOL_OPERATOR", "DOCUMENT", "NODE", "ATTRIBUTE", 
                      "STRING", "INT", "FLOAT", "ELSE", "IF", "FOR", "WHILE", 
                      "IN", "AND", "OR", "NEW", "VARNAME", "NUMBER_LITERAL", 
                      "STRING_LITERAL", "WHITESPACE", "OPEN_BRACKET", "CLOSE_BRACKET", 
                      "OPEN_SQUAR_EBRACKET", "CLOSE_SQUARE_BRACKET", "OPEN_FIGURE_BRACKET", 
                      "CLOSE_FIGURE_BRACKET", "SEMICOLON", "QOUTES", "ASSIGMENT", 
                      "SUM_ASSIGMENT", "DOT", "MORE_THAN", "LESS_THAN", 
                      "EQUAL", "NOT_EQUAL", "MORE_EQUAL", "LESS_EQUAL", 
                      "PlUS", "MINUS", "MULTIPLICATION", "DIVISION", "COMMENT" ]

    RULE_var_init = 0
    RULE_assignment = 1
    RULE_sum_assignment = 2
    RULE_get = 3
    RULE_get_array_element = 4
    RULE_func_call = 5
    RULE_if_statement = 6
    RULE_if_block = 7
    RULE_else_if_block = 8
    RULE_else_block = 9
    RULE_for_statement = 10
    RULE_while_statement = 11
    RULE_func_init = 12
    RULE_type_cast = 13
    RULE_range_statement = 14
    RULE_condition = 15
    RULE_params = 16
    RULE_expression = 17
    RULE_get_operation = 18
    RULE_operation = 19
    RULE_xml = 20

    ruleNames =  [ "var_init", "assignment", "sum_assignment", "get", "get_array_element", 
                   "func_call", "if_statement", "if_block", "else_if_block", 
                   "else_block", "for_statement", "while_statement", "func_init", 
                   "type_cast", "range_statement", "condition", "params", 
                   "expression", "get_operation", "operation", "xml" ]

    EOF = Token.EOF
    T__0=1
    ARRAY_TYPE=2
    TYPE=3
    ACTION_OPERATOR=4
    BOOL_OPERATOR=5
    DOCUMENT=6
    NODE=7
    ATTRIBUTE=8
    STRING=9
    INT=10
    FLOAT=11
    ELSE=12
    IF=13
    FOR=14
    WHILE=15
    IN=16
    AND=17
    OR=18
    NEW=19
    VARNAME=20
    NUMBER_LITERAL=21
    STRING_LITERAL=22
    WHITESPACE=23
    OPEN_BRACKET=24
    CLOSE_BRACKET=25
    OPEN_SQUAR_EBRACKET=26
    CLOSE_SQUARE_BRACKET=27
    OPEN_FIGURE_BRACKET=28
    CLOSE_FIGURE_BRACKET=29
    SEMICOLON=30
    QOUTES=31
    ASSIGMENT=32
    SUM_ASSIGMENT=33
    DOT=34
    MORE_THAN=35
    LESS_THAN=36
    EQUAL=37
    NOT_EQUAL=38
    MORE_EQUAL=39
    LESS_EQUAL=40
    PlUS=41
    MINUS=42
    MULTIPLICATION=43
    DIVISION=44
    COMMENT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Var_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(EasyXMLParser.TYPE)
            else:
                return self.getToken(EasyXMLParser.TYPE, i)

        def VARNAME(self):
            return self.getToken(EasyXMLParser.VARNAME, 0)

        def ASSIGMENT(self):
            return self.getToken(EasyXMLParser.ASSIGMENT, 0)

        def NEW(self):
            return self.getToken(EasyXMLParser.NEW, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def expression(self):
            return self.getTypedRuleContext(EasyXMLParser.ExpressionContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(EasyXMLParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return EasyXMLParser.RULE_var_init

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_init" ):
                listener.enterVar_init(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_init" ):
                listener.exitVar_init(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_init" ):
                return visitor.visitVar_init(self)
            else:
                return visitor.visitChildren(self)




    def var_init(self):

        localctx = EasyXMLParser.Var_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_var_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(EasyXMLParser.TYPE)
            self.state = 43
            self.match(EasyXMLParser.VARNAME)
            self.state = 44
            self.match(EasyXMLParser.ASSIGMENT)
            self.state = 45
            self.match(EasyXMLParser.NEW)
            self.state = 46
            self.match(EasyXMLParser.TYPE)
            self.state = 47
            self.match(EasyXMLParser.OPEN_BRACKET)
            self.state = 48
            self.expression(0)
            self.state = 49
            self.match(EasyXMLParser.CLOSE_BRACKET)
            self.state = 50
            self.match(EasyXMLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(EasyXMLParser.VARNAME, 0)

        def ASSIGMENT(self):
            return self.getToken(EasyXMLParser.ASSIGMENT, 0)

        def expression(self):
            return self.getTypedRuleContext(EasyXMLParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(EasyXMLParser.SEMICOLON, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def NUMBER_LITERAL(self):
            return self.getToken(EasyXMLParser.NUMBER_LITERAL, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def TYPE(self):
            return self.getToken(EasyXMLParser.TYPE, 0)

        def ARRAY_TYPE(self):
            return self.getToken(EasyXMLParser.ARRAY_TYPE, 0)

        def getRuleIndex(self):
            return EasyXMLParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = EasyXMLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EasyXMLParser.ARRAY_TYPE or _la==EasyXMLParser.TYPE:
                self.state = 52
                _la = self._input.LA(1)
                if not(_la==EasyXMLParser.ARRAY_TYPE or _la==EasyXMLParser.TYPE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 55
            self.match(EasyXMLParser.VARNAME)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EasyXMLParser.OPEN_BRACKET:
                self.state = 56
                self.match(EasyXMLParser.OPEN_BRACKET)
                self.state = 57
                self.match(EasyXMLParser.NUMBER_LITERAL)
                self.state = 58
                self.match(EasyXMLParser.CLOSE_BRACKET)


            self.state = 61
            self.match(EasyXMLParser.ASSIGMENT)
            self.state = 62
            self.expression(0)
            self.state = 63
            self.match(EasyXMLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sum_assignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(EasyXMLParser.VARNAME, 0)

        def SUM_ASSIGMENT(self):
            return self.getToken(EasyXMLParser.SUM_ASSIGMENT, 0)

        def expression(self):
            return self.getTypedRuleContext(EasyXMLParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(EasyXMLParser.SEMICOLON, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def NUMBER_LITERAL(self):
            return self.getToken(EasyXMLParser.NUMBER_LITERAL, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def getRuleIndex(self):
            return EasyXMLParser.RULE_sum_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSum_assignment" ):
                listener.enterSum_assignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSum_assignment" ):
                listener.exitSum_assignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSum_assignment" ):
                return visitor.visitSum_assignment(self)
            else:
                return visitor.visitChildren(self)




    def sum_assignment(self):

        localctx = EasyXMLParser.Sum_assignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sum_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(EasyXMLParser.VARNAME)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EasyXMLParser.OPEN_BRACKET:
                self.state = 66
                self.match(EasyXMLParser.OPEN_BRACKET)
                self.state = 67
                self.match(EasyXMLParser.NUMBER_LITERAL)
                self.state = 68
                self.match(EasyXMLParser.CLOSE_BRACKET)


            self.state = 71
            self.match(EasyXMLParser.SUM_ASSIGMENT)
            self.state = 72
            self.expression(0)
            self.state = 73
            self.match(EasyXMLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self, i:int=None):
            if i is None:
                return self.getTokens(EasyXMLParser.VARNAME)
            else:
                return self.getToken(EasyXMLParser.VARNAME, i)

        def DOT(self):
            return self.getToken(EasyXMLParser.DOT, 0)

        def get(self):
            return self.getTypedRuleContext(EasyXMLParser.GetContext,0)


        def SEMICOLON(self):
            return self.getToken(EasyXMLParser.SEMICOLON, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def params(self):
            return self.getTypedRuleContext(EasyXMLParser.ParamsContext,0)


        def getRuleIndex(self):
            return EasyXMLParser.RULE_get

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGet" ):
                listener.enterGet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGet" ):
                listener.exitGet(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGet" ):
                return visitor.visitGet(self)
            else:
                return visitor.visitChildren(self)



    def get(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = EasyXMLParser.GetContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_get, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(EasyXMLParser.VARNAME)
            self.state = 77
            self.match(EasyXMLParser.DOT)
            self.state = 78
            self.match(EasyXMLParser.VARNAME)
            self._ctx.stop = self._input.LT(-1)
            self.state = 90
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 88
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = EasyXMLParser.GetContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_get)
                        self.state = 80
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 81
                        self.match(EasyXMLParser.SEMICOLON)
                        pass

                    elif la_ == 2:
                        localctx = EasyXMLParser.GetContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_get)
                        self.state = 82
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 83
                        self.match(EasyXMLParser.OPEN_BRACKET)
                        self.state = 85
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyXMLParser.ARRAY_TYPE) | (1 << EasyXMLParser.TYPE) | (1 << EasyXMLParser.VARNAME) | (1 << EasyXMLParser.NUMBER_LITERAL) | (1 << EasyXMLParser.STRING_LITERAL) | (1 << EasyXMLParser.OPEN_BRACKET))) != 0):
                            self.state = 84
                            self.params()


                        self.state = 87
                        self.match(EasyXMLParser.CLOSE_BRACKET)
                        pass

             
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Get_array_elementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(EasyXMLParser.VARNAME, 0)

        def OPEN_SQUAR_EBRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_SQUAR_EBRACKET, 0)

        def NUMBER_LITERAL(self):
            return self.getToken(EasyXMLParser.NUMBER_LITERAL, 0)

        def CLOSE_SQUARE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_SQUARE_BRACKET, 0)

        def getRuleIndex(self):
            return EasyXMLParser.RULE_get_array_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGet_array_element" ):
                listener.enterGet_array_element(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGet_array_element" ):
                listener.exitGet_array_element(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGet_array_element" ):
                return visitor.visitGet_array_element(self)
            else:
                return visitor.visitChildren(self)




    def get_array_element(self):

        localctx = EasyXMLParser.Get_array_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_get_array_element)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(EasyXMLParser.VARNAME)
            self.state = 94
            self.match(EasyXMLParser.OPEN_SQUAR_EBRACKET)
            self.state = 95
            self.match(EasyXMLParser.NUMBER_LITERAL)
            self.state = 96
            self.match(EasyXMLParser.CLOSE_SQUARE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARNAME(self):
            return self.getToken(EasyXMLParser.VARNAME, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def SEMICOLON(self):
            return self.getToken(EasyXMLParser.SEMICOLON, 0)

        def params(self):
            return self.getTypedRuleContext(EasyXMLParser.ParamsContext,0)


        def TYPE(self):
            return self.getToken(EasyXMLParser.TYPE, 0)

        def ARRAY_TYPE(self):
            return self.getToken(EasyXMLParser.ARRAY_TYPE, 0)

        def getRuleIndex(self):
            return EasyXMLParser.RULE_func_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_call" ):
                listener.enterFunc_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_call" ):
                listener.exitFunc_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_call" ):
                return visitor.visitFunc_call(self)
            else:
                return visitor.visitChildren(self)




    def func_call(self):

        localctx = EasyXMLParser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EasyXMLParser.ARRAY_TYPE or _la==EasyXMLParser.TYPE:
                self.state = 98
                _la = self._input.LA(1)
                if not(_la==EasyXMLParser.ARRAY_TYPE or _la==EasyXMLParser.TYPE):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 101
            self.match(EasyXMLParser.VARNAME)
            self.state = 102
            self.match(EasyXMLParser.OPEN_BRACKET)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyXMLParser.ARRAY_TYPE) | (1 << EasyXMLParser.TYPE) | (1 << EasyXMLParser.VARNAME) | (1 << EasyXMLParser.NUMBER_LITERAL) | (1 << EasyXMLParser.STRING_LITERAL) | (1 << EasyXMLParser.OPEN_BRACKET))) != 0):
                self.state = 103
                self.params()


            self.state = 106
            self.match(EasyXMLParser.CLOSE_BRACKET)
            self.state = 107
            self.match(EasyXMLParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_block(self):
            return self.getTypedRuleContext(EasyXMLParser.If_blockContext,0)


        def else_if_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyXMLParser.Else_if_blockContext)
            else:
                return self.getTypedRuleContext(EasyXMLParser.Else_if_blockContext,i)


        def else_block(self):
            return self.getTypedRuleContext(EasyXMLParser.Else_blockContext,0)


        def getRuleIndex(self):
            return EasyXMLParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = EasyXMLParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.if_block()
            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.else_if_block() 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EasyXMLParser.ELSE:
                self.state = 116
                self.else_block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(EasyXMLParser.IF, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def condition(self):
            return self.getTypedRuleContext(EasyXMLParser.ConditionContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def OPEN_FIGURE_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_FIGURE_BRACKET, 0)

        def CLOSE_FIGURE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_FIGURE_BRACKET, 0)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyXMLParser.OperationContext)
            else:
                return self.getTypedRuleContext(EasyXMLParser.OperationContext,i)


        def getRuleIndex(self):
            return EasyXMLParser.RULE_if_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_block" ):
                listener.enterIf_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_block" ):
                listener.exitIf_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_block" ):
                return visitor.visitIf_block(self)
            else:
                return visitor.visitChildren(self)




    def if_block(self):

        localctx = EasyXMLParser.If_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(EasyXMLParser.IF)
            self.state = 120
            self.match(EasyXMLParser.OPEN_BRACKET)
            self.state = 121
            self.condition()
            self.state = 122
            self.match(EasyXMLParser.CLOSE_BRACKET)
            self.state = 123
            self.match(EasyXMLParser.OPEN_FIGURE_BRACKET)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyXMLParser.ARRAY_TYPE) | (1 << EasyXMLParser.TYPE) | (1 << EasyXMLParser.IF) | (1 << EasyXMLParser.FOR) | (1 << EasyXMLParser.WHILE) | (1 << EasyXMLParser.VARNAME))) != 0):
                self.state = 124
                self.operation()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(EasyXMLParser.CLOSE_FIGURE_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_if_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(EasyXMLParser.ELSE, 0)

        def IF(self):
            return self.getToken(EasyXMLParser.IF, 0)

        def OPEN_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_BRACKET, 0)

        def condition(self):
            return self.getTypedRuleContext(EasyXMLParser.ConditionContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_BRACKET, 0)

        def OPEN_FIGURE_BRACKET(self):
            return self.getToken(EasyXMLParser.OPEN_FIGURE_BRACKET, 0)

        def CLOSE_FIGURE_BRACKET(self):
            return self.getToken(EasyXMLParser.CLOSE_FIGURE_BRACKET, 0)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyXMLParser.OperationContext)
            else:
                return self.getTypedRuleContext(EasyXMLParser.OperationContext,i)


        def getRuleIndex(self):
            return EasyXMLParser.RULE_else_if_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_if_block" ):
                listener.enterElse_if_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_if_block" ):
                listener.exitElse_if_block(self)
